# geo-base

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  DEPLOY.ja.md  DEPLOY.md  HANDOVER.md  HANDOVER_S2_FINAL.md  HANDOVER_S3.md  HANDOVER_S3_STEP3.2-C.md  HANDOVER_S3_STEP3.2-D.md  LOCAL_DEVELOPMENT.ja.md  LOCAL_DEVELOPMENT.md  PROJECT_ROADMAP.md  README.ja.md  README.md  README_STEP3.1-C.md  ROADMAP_S3.md  SECURITY.md  TESTING.ja.md  TESTING.md  docker-compose.yml  dumprepo.json  features.csv  geo-base.txt  vercel.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/actions/e2e-setup/: action.yml
.github/workflows/: cleanup-expired.yml  e2e-full.yml  e2e-nightly.yml  e2e-smoke.yml  i18n-guard.yml  unit-tests.yml
.github/workflows/scripts/: flaky-summary.sh  i18n_guard.py  start-moto.sh
api/: .dockerignore  .env.example  Dockerfile  FLY_DEPLOY.md  README.md  fly.toml  index.py  pyproject.toml  requirements.txt
api/data/: sample.geojson  test_tile.pbf
api/lib/: __init__.py  auth.py  batch.py  cache.py  cache_health.py  config.py  cors_middleware.py  database.py  db_helpers.py  errors.py  main.py  main_additions.py  pmtiles.py  raster_tiles.py  redis_client.py  retry.py  stats_endpoints.py  storage.py  tile_cache.py  tiles.py  validators.py
api/lib/_auth_pkg/: password.py  provider.py  rate_limit.py  tokens.py
api/lib/_auth_pkg/providers/: local.py
api/lib/auth/: __init__.py  api_key_auth.py  api_key_rate_limit.py  cli.py  context.py  errors.py  jwt_utils.py  models.py  password.py  provider.py  rate_limit.py  tokens.py
api/lib/auth/email_backends/: __init__.py  console_backend.py  null_backend.py  smtp_backend.py  templates.py
api/lib/auth/providers/: local.py  supabase.py
api/lib/models/: __init__.py  api_key.py  datasource.py  feature.py  team.py  tileset.py
api/lib/routers/: __init__.py  api_keys.py  auth.py  batch_features.py  colormaps.py  datasources.py  features.py  health.py  stats.py  teams.py  test_helpers.py  tilesets.py
api/lib/routers/tiles/: __init__.py  dynamic.py  mbtiles.py  pmtiles.py  raster.py
api/tests/: README.md  __init__.py  conftest.py  test_api_keys.py  test_auth_cli.py  test_auth_locale.py  test_batch.py  test_database.py  test_db_helpers.py  test_error_envelope.py  test_fix_bounds.py  test_redis_client.py  test_retry.py  test_storage.py  test_teams.py  test_test_helpers.py  test_tile_cache.py  test_tileset_models.py  test_validators.py
api/tests/test_auth/: test_api_key_auth.py  test_api_key_rate_limit.py  test_cli.py  test_context.py  test_cors_middleware.py  test_email_backends.py  test_email_templates.py  test_errors.py  test_factory.py  test_jwt_utils.py  test_local_provider.py  test_models.py  test_password.py  test_rate_limit.py  test_supabase_provider.py  test_tile_access_v2.py  test_tileset_write_access_v2.py  test_tokens.py
api/tests/test_routers/: test_api_keys_routes.py  test_auth_routes.py  test_features_datasources_team_access.py  test_invitation_token_revoke.py  test_team_tileset_permissions.py  test_write_api_key_auth.py
app/: .env.example  .gitignore  README.md  next.config.ts  package-lock.json  package.json  playwright.config.ts  vitest.config.mts
app/src/: middleware.ts  proxy.ts
app/src/app/: globals.css  layout.tsx  page.tsx
app/src/contexts/: auth-context.tsx
app/src/hooks/: index.ts  use-api.ts  use-locale-switcher.ts
app/src/i18n/: config.ts  locale-cookie.ts  parse-accept-language.test.ts  parse-accept-language.ts  request.ts
app/src/lib/: api-errors.test.ts  api-errors.ts  api.ts
app/src/types/: index.ts
docker/: docker-compose.yml
docker/postgis-init/: 01_init.sql  02_raster_schema.sql  03_pmtiles_schema.sql  04_auth_schema.sql  04_rls_policies.sql  05_teams_schema.sql  06_api_keys_schema.sql  07_preferred_locale.sql  09_rls_policies.sql  98_create_e2e_db.sh  99_create_test_db.sh
docs/: A11Y_MANUAL_CHECKLIST.md  ACCESS_CONTROL_REVIEW.ja.md  ACCESS_CONTROL_REVIEW.md  ASYNC_SYNC_AUDIT.md  AUTH_E2E_CHECKLIST.md  AUTH_MIGRATION.md  AUTH_SETUP.ja.md  AUTH_SETUP.md  I18N_CONVENTIONS.md  INFRA_MIGRATION_INVESTIGATION.md  POSTGRES_SETUP.md  REDIS_SETUP.ja.md  REDIS_SETUP.md
docs/handovers/: HANDOVER.md  HANDOVER_MAIN_REFACTORING.md  HANDOVER_S3.md  HANDOVER_S3_STEP3.2-B.md  STEP2_TILETYPE_FIX.md  STEP3.1-C_COG_SUPPORT.md  STEP3_SOURCE_LAYER_FIX.md
docs/manuals/: AUTH_MIGRATION.md  AUTH_SETUP.ja.md  AUTH_SETUP.md  DEPLOY.ja.md  POSTGRES_SETUP.ja.md
docs/plans/: 2026-05-08-pluggable-auth.md  2026-05-10-admin-ui-design-system-issue-creation.md  2026-05-10-e2e-phase1.md  2026-05-11-e2e-phase2.md  2026-05-11-e2e-phase3.md  2026-05-11-i18n-phase2.md  2026-05-11-i18n-phase3.md  2026-05-13-github-actions-nodejs24-migration.md  2026-06-16-foss4g-2026-presentation.md  ROADMAP_S3.md  ROADMAP_S4.md
docs/refs/: A11Y_MANUAL_CHECKLIST.md  AUTH_E2E_CHECKLIST.md  I18N_CONVENTIONS.md
docs/reports/: ACCESS_CONTROL_REVIEW.md  ASYNC_SYNC_AUDIT.md  INFRA_MIGRATION_INVESTIGATION.md
docs/specs/: 2026-05-08-pluggable-auth-design.md  2026-05-10-admin-ui-design-system-migration-design.md  2026-05-10-i18n-strategy-design.md  2026-05-12-radix-portal-playwright-pitfall.md  2026-06-16-foss4g-2026-presentation-design.md
geo-base/app/: package.json
mcp/: .dockerignore  .env.example  API_REFERENCE.ja.md  API_REFERENCE.md  CHANGELOG.md  Dockerfile  README.md  claude_desktop_config.example.json  config.py  errors.py  fly.toml  logger.py  pyproject.toml  retry.py  server.py  validators.py
mcp/docs/: HANDOVER_S2.md  MCP_BEST_PRACTICES.md  MCP_PRESENTATION.md  MCP_ROADMAP_S2.md  TEST_PLAN.md
mcp/tests/: __init__.py  conftest.py  live_test.py  test_analysis.py  test_crud.py  test_errors.py  test_geocoding.py  test_integration.py  test_logger.py  test_retry.py  test_stats.py  test_tools.py  test_validators.py
mcp/tools/: __init__.py  analysis.py  crud.py  features.py  geocoding.py  stats.py  tilesets.py
pg/: Dockerfile  README.md  fly.toml
scripts/: fix_bounds.py  seed.sh  seed_sample_data.fish  seed_sample_data.py  setup.sh
(+160 files in other folders)
