[project]
name = "geo-base-api"
version = "0.1.0"
description = "FastAPI Tile Server for geo-base"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-dotenv>=1.0.0",
    "psycopg2-binary>=2.9.9",
    "httpx>=0.26.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "pymbtiles>=0.5.0",
    "pmtiles>=3.0.0",
    "geoalchemy2>=0.14.0",
    "shapely>=2.0.0",
]

[project.optional-dependencies]
raster = [
    "rio-tiler>=6.2.0",
    "rasterio>=1.3.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",
    "black>=24.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lib"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = []

[tool.black]
line-length = 100
target-version = ["py311"]
