[project]
name = "geo-base-api"
version = "0.4.5"
description = "FastAPI Tile Server for geo-base"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-dotenv>=1.0.0",
    "psycopg2-binary>=2.9.9",
    "httpx>=0.26.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "pymbtiles>=0.5.0",
    "geoalchemy2>=0.14.0",
    "shapely>=2.0.0",
    "rio-tiler>=7.0.0",
    "rasterio>=1.4.0",
    "aiopmtiles @ git+https://github.com/developmentseed/aiopmtiles.git",
    "PyJWT>=2.8.0",
    "cryptography>=41.0.0",
    "python-multipart>=0.0.20",
    "email-validator>=2.0.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt<4.0",
    "boto3>=1.34.0",
    # aiopmtiles の S3 backend が `s3://` URL を扱う際に require される (issue #101)
    "aioboto3>=13.0.0",
    # キャッシュ / レート制限の Redis backend。本番では Upstash を利用 (issue #119)
    "redis>=5.0.0",
]

[project.optional-dependencies]
raster = [
    "rio-tiler>=6.2.0",
    "rasterio>=1.3.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.26.0",
    "black>=24.0.0",
    "ruff>=0.1.0",
    "respx>=0.21.0",
    "freezegun>=1.4.0",
    # `[s3]` は @mock_aws デコレータ用、`[server]` は moto.server (CI sidecar)
    # 用の flask + werkzeug を入れる。TS-12 (Issue #112) で必要。
    "moto[s3,server]>=5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lib"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
# E501 (line too long) は black に委ねる。black が自動分割できない長い文字列や URL は
# そのまま残る方針 (line-length=100 は black 側で enforce)。
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["lib"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
