[project]
name = "geo-base-mcp"
version = "1.0.0"
description = "MCP Server for geo-base tile server - Access geographic data through Claude Desktop"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "geo-base team" }]
keywords = ["mcp", "geo", "tiles", "gis", "maplibre", "postgis"]

dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.26.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "tenacity>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "black>=24.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
geo-base-mcp = "server:mcp.run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tools", "server.py", "config.py", "logger.py", "errors.py", "retry.py", "validators.py"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
# E501 (line too long) は black に委ねる。black が自動分割できない長い文字列や URL は
# そのまま残る方針 (line-length=100 は black 側で enforce)。
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "asyncio: mark test as async",
]
